--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       Benjamin Percival &middot; 
   </title>
 
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="/public/sun.png">
-  <link rel="alternate" type="application/atom+xml" title="Benjamin Percival" href="/atom.xml">
+  <link rel="shortcut icon" href="public/sun.png">
+  <link rel="alternate" type="application/atom+xml" title="Benjamin Percival" href="atom.xml">
 </head>
 
 
@@ -21,7 +21,7 @@
 
     <div class="container content">
       <header class="masthead">
-	<a href="/" title="Home"><img id="profile" src="/public/me.jpg" /></a>
+	<a href="/" title="Home"><img id="profile" src="public/me.jpg" /></a>
 	<h3 class="masthead-title">
           <a href="/" title="Home">Benjamin Percival</a>
 	  </br>
@@ -31,7 +31,7 @@
 <div>
   <div class="section">
   <h1 class="">Research Interests</h1>
-  <p>I'm in finl year of a PhD at Liverpool Univerity under the supervision of <a href="http://www.maths.liv.ac.uk/TheorPhys/people/staff/faraggi/">Alon Faraggi</a> in the <a href="http://www.maths.liv.ac.uk/TheorPhys/RESEARCH/STRING_THEORY/index.html">String and BSM Phenomenology Group</a>. My research interests are: </p>
+  <p>I'm in finl year of a PhD at Liverpool Univerity under the supervision of <a href="http://www.maths.liv.ac.uk/TheorPhys/people/staff/faraggi/">Alon Faraggi</a> in the <a href="http://www.maths.liv.ac.uk/TheorPhys/RESEARCH/STRING_THEORY/index.htm">String and BSM Phenomenology Group</a>. My research interests are: </p>
   <ul class="aboutme">
     <li> Exploring phenomenological characteristics of classes of models in the string landscape. In particular, those arising from Z_2 x Z_2 orbifold compactifications.</li>
     <li>Issues of tachyonic instability and the cosmological constant problem for non-supersymmetric strings.</li>
@@ -39,7 +39,7 @@
     <li>Applying sophisticated computational techniques to classification problems in string theory, such as machine learning and, recently, <a href="https://en.wikipedia.org/wiki/Satisfiability_modulo_theories">Satisfiability Modulo Theories (SMTs)</a>.</li>
       </ul>
 <p>
-Here's <a href="/public/My_CV.pdf"> My CV</a> and <a href="/public/Publist.pdf"> my publication list.</a>
+Here's <a href="public/My_CV.pdf"> My CV</a> and <a href="public/Publist.pdf"> my publication list.</a>
 </p>
 </div>
 
@@ -53,7 +53,7 @@ Here's <a href="/public/My_CV.pdf"> My CV</a> and <a href="/public/Publist.pdf">
           </a>
         </h3></li></ul>
 
-    <p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p></div>
+    </div>
 
       </main>
 
