corrected couple of typos

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 <div>
   <div class="section">
   <h1 class="">Research Interests</h1>
-  <p>I'm in finl year of a PhD at Liverpool Univerity under the supervision of <a href="http://www.maths.liv.ac.uk/TheorPhys/people/staff/faraggi/">Alon Faraggi</a> in the <a href="http://www.maths.liv.ac.uk/TheorPhys/RESEARCH/STRING_THEORY/index.htm">String and BSM Phenomenology Group</a>. My research interests are: </p>
+  <p>I'm in final year of a PhD at Liverpool Univerity under the supervision of <a href="http://www.maths.liv.ac.uk/TheorPhys/people/staff/faraggi/">Alon Faraggi</a> in the <a href="http://www.maths.liv.ac.uk/TheorPhys/RESEARCH/STRING_THEORY/index.htm">String and BSM Phenomenology Group</a>. My research interests are: </p>
   <ul class="aboutme">
     <li> Exploring phenomenological characteristics of classes of models in the string landscape. In particular, those arising from Z_2 x Z_2 orbifold compactifications.</li>
-    <li>Issues of tachyonic instability and the cosmological constant problem for non-supersymmetric strings.</li>
+    <li>Issues of tachyonic instability and the cosmological constant problem in the context of non-supersymmetric strings.</li>
     <li>Interpolations of string partition functions in different dimensions. </li>
     <li>Applying sophisticated computational techniques to classification problems in string theory, such as machine learning and, recently, <a href="https://en.wikipedia.org/wiki/Satisfiability_modulo_theories">Satisfiability Modulo Theories (SMTs)</a>.</li>
       </ul>
