--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div>
   <div class="section">
   <h1 class="">Research Interests</h1>
-  <p>I'm currently a postdoc at Liverpool University after completing my PhD in 2022 under the supervision of <a href="http://www.maths.liv.ac.uk/TheorPhys/people/staff/faraggi/">Alon Faraggi</a>, also in the <a href="http://www.maths.liv.ac.uk/TheorPhys/RESEARCH/STRING_THEORY/index.htm">String and BSM Phenomenology Group</a>. I also currently help lecture MATH 254 at University of Liverpool- a 2nd year Undergraduate course in Probability and Statistics. My research interests are: </p>
+  <p>I'm currently a postdoc at Liverpool University after completing my PhD in 2022 under the supervision of <a href="http://www.maths.liv.ac.uk/TheorPhys/people/staff/faraggi/">Alon Faraggi</a>, also in the <a href="http://www.maths.liv.ac.uk/TheorPhys/RESEARCH/STRING_THEORY/index.htm">String and BSM Phenomenology Group</a>. My research interests are: </p>
   <ul class="aboutme">
     <li> Exploring phenomenological characteristics of classes of models in the string landscape. In particular, those arising from Z_2 x Z_2 orbifold compactifications.</li>
     <li> Issues of tachyonic instability and the cosmological constant problem in the context of non-supersymmetric strings.</li>
