--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <li> Applications of artificial intelligence to the string landscape, such as work on <a href="https://en.wikipedia.org/wiki/Satisfiability_modulo_theories">Satisfiability Modulo Theories (SMTs)</a>.</li>
       </ul>
 <p>
-Here's an outdated version of my <a href="public/My_CV.pdf"> My CV</a> and my publications can be found on <a href="https://inspirehep.net/authors/1829924">Inspire</a> and <a href="https://arxiv.org/search/hep-th?searchtype=author&query=Percival%2C+B">Arxiv</a>.
+Here's my <a href="public/My_CV.pdf"> My CV</a> and my publications can be found on <a href="https://inspirehep.net/authors/1829924">Inspire</a> and <a href="https://arxiv.org/search/hep-th?searchtype=author&query=Percival%2C+B">Arxiv</a>.
 </p>
 </div>
 
