--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@ m<!DOCTYPE html>
       </header>
 <div>
   <div class="section">
-  <h1 class="">Research Interests</h1>
-  <p>I'm currently a postdoc at Liverpool University after completing my PhD in 2022 under the supervision of <a href="http://www.maths.liv.ac.uk/TheorPhys/people/staff/faraggi/">Alon Faraggi</a>, also in the <a href="http://www.maths.liv.ac.uk/TheorPhys/RESEARCH/STRING_THEORY/index.htm">String and BSM Phenomenology Group</a>. My research interests are: </p>
+  <h1 class="">Research Interests: Air Pollution Modelling</h1>
+  <p>
+	  I am currently a Research Associate at Manchester Metropolitan university performing environmental impact assessments in relation to air pollutant dispersion around airport sites for the international consortium, HOPE. 
+  </p>
+  <h1 class="">Research Interests: String Theory</h1>
+  <p> I used to be a postdoctoral research associate at Liverpool University after completing my PhD in 2022 under the supervision of <a href="http://www.maths.liv.ac.uk/TheorPhys/people/staff/faraggi/">Alon Faraggi</a>, also in the <a href="http://www.maths.liv.ac.uk/TheorPhys/RESEARCH/STRING_THEORY/index.htm">String and BSM Phenomenology Group</a>. My research interests are: </p>
   <ul class="aboutme">
     <li> Exploring phenomenological characteristics of classes of models in the string landscape. In particular, those arising from Z_2 x Z_2 orbifold compactifications.</li>
     <li> Issues of tachyonic instability and the cosmological constant problem in the context of non-supersymmetric strings.</li>
